--- a/package.json
+++ b/package.json
@@ -49,6 +49,8 @@
     "@material-ui/icons": "^4.5.1",
     "@material-ui/lab": "^4.0.0-alpha.56",
     "@reduxjs/toolkit": "^1.4.0",
+    "@rjsf/core": "^2.4.0",
+    "@rjsf/material-ui": "^2.4.0",
     "electron-is-dev": "^1.0.1",
     "electron-log": "^3.0.5",
     "electron-window-state": "5.0.3",
