feat: Add Editor

--- a/package.json
+++ b/package.json
@@ -55,11 +55,10 @@
     "electron-log": "^3.0.5",
     "electron-window-state": "5.0.3",
     "lodash": "^4.17.20",
-    "octokat": "^0.10.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-monaco-editor": "^0.40.0",
     "react-redux": "^7.2.1",
-    "react-scripts": "3.4.3",
     "typeface-roboto": "^0.0.75",
     "uuid": "^8.3.1"
   },
@@ -70,19 +69,23 @@
     "concurrently": "4.1.0",
     "electron": "9.2.0",
     "electron-builder": "22.8.0",
+    "monaco-editor-webpack-plugin": "^2.0.0",
+    "react-app-rewired": "latest",
+    "react-scripts": "latest",
     "rimraf": "^2.6.3",
     "standard-version": "8.0.1",
+    "vercel": "^21.0.1",
     "wait-for-localhost": "*",
     "wait-for-localhost-cli": "1.1.0"
   },
   "scripts": {
-    "dev": "yarn run clean && concurrently \"BROWSER=none react-scripts start\" \"wait-for-localhost 3000 && electron .\"",
+    "dev": "yarn run clean && concurrently \"BROWSER=none react-app-rewired start\" \"wait-for-localhost 3000 && electron .\"",
     "build": "yarn run clean && yarn build:web && yarn build:app",
-    "build:web": "react-scripts build",
+    "build:web": "react-app-rewired build",
     "build:app": "yarn cp-src-electron && electron-builder -c.extraMetadata.main=build/app/electron.js -mwl",
     "cp-src-electron": "mkdir build/app && cp -r ./electron/ build/app",
-    "start": "react-scripts start",
-    "test": "react-scripts test",
+    "start": "react-app-rewired start",
+    "test": "react-app-rewired test",
     "clean": "rimraf build",
     "release:prepare": "standard-version -r $1",
     "release:app": "electron-builder -mwl -p always"
