--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,5 +1,5 @@
 {
-  "short_name": "json-schema-editor",
+  "short_name": "json-cms",
   "name": "A tool to create and implement JSON schemas",
   "icons": [
     {
